# iracing-client

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/actions/poetry-initialize-action/: action.yaml
.github/workflows/: release.yaml  test-suite.yaml  test.yaml
examples/: quick_start.py
src/iracing_client/: auth.py  trace.py
src/iracing_client/data/: common.py  constants.py  league.py  member.py  results.py
src/iracing_data_client/: auth.py
src/iracing_data_client/data/: common.py  constants.py  league.py  member.py
src/iracing_web_api/: trace.py
src/iracing_web_api/data/: constants.py  league.py  member.py
test_scripts/: test_curl.sh
tests/: conftest.py  test_auth.py
tests/data/: test_constants.py  test_league.py  test_member.py
tests/integration/: conftest.py  test_auth.py
tests/integration/data/: test_constants.py  test_league.py  test_member.py  test_results.py
tests/unit/: conftest.py  test_auth.py
