[tool.poetry]
name = "iracing-web-api"
version = "0.1.0"
description = ""
authors = ["James Carter <tegatai@gmail.com>"]
readme = "README.md"
packages = [{include = "src/iracing_web_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
