[tool.poetry]
name = "iracing-client"
version = "0.1.2a1"
description = ""
authors = ["James Carter <tegatai@gmail.com>"]
readme = "README.md"
packages = [{include = "src/iracing_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pylint = "^2.17.4"
black = "^23.3.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
